--- a/source/_static/ma.html
+++ b/source/_static/ma.html
@@ -21,8 +21,10 @@
 <span class="mf">11.0</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">b</span> <span class="o">=</span> <span class="n">repeat</span><span class="p">(</span><span class="mi">1</span><span class="o">/</span><span class="n">n</span><span class="p">,</span> <span class="n">n</span><span class="p">)</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">b</span>
-<span class="n">array</span><span class="p">([</span> <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>
-        <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>
+<span class="n">array</span><span class="p">([</span> <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>
+<span class="mf">0.09090909</span><span class="p">,</span>
+        <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>  <span class="mf">0.09090909</span><span class="p">,</span>
+<span class="mf">0.09090909</span><span class="p">,</span>
         <span class="mf">0.09090909</span><span class="p">])</span>
 </pre></div>
 
@@ -36,7 +38,7 @@
 </pre></div>
 <figure>
 <img src="figures/ma_figure3_1.png" width="600"/>
-<figcaption>Frequency response of an 11 point moving average filter</figcaption>
+<figcaption >Frequency response of an 11 point moving average filter</figcaption>
 </figure>
 <p></BODY>
 </HTML></p>
