More formatting to example gallery

--- a/source/examples/FIR_design.html
+++ b/source/examples/FIR_design.html
@@ -217,7 +217,7 @@ Notice also that Pweave can now catch multiple figures/code chunk.</p>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">show</span><span class="p">()</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="c">#Impulse and step response</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">figure</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
-<span class="o">&lt;</span><span class="n">matplotlib</span><span class="o">.</span><span class="n">figure</span><span class="o">.</span><span class="n">Figure</span> <span class="nb">object</span> <span class="n">at</span> <span class="mh">0x7faad2683e10</span><span class="o">&gt;</span>
+<span class="o">&lt;</span><span class="n">matplotlib</span><span class="o">.</span><span class="n">figure</span><span class="o">.</span><span class="n">Figure</span> <span class="nb">object</span> <span class="n">at</span> <span class="mh">0x7fd5f8e54e10</span><span class="o">&gt;</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">impz</span><span class="p">(</span><span class="n">a</span><span class="p">)</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">show</span><span class="p">()</span>
 </pre></div>
