Updated docs for 0.23.2

--- a/source/examples/FIR_design_rst.html
+++ b/source/examples/FIR_design_rst.html
@@ -714,7 +714,7 @@ multiple figures/code chunk.</p>
 <span class="operator">&gt;&gt;&gt;</span> <span class="name">show</span><span class="punctuation">()</span>
 <span class="operator">&gt;&gt;&gt;</span> <span class="comment">#Impulse and step response</span>
 <span class="operator">&gt;&gt;&gt;</span> <span class="name">figure</span><span class="punctuation">(</span><span class="literal number integer">2</span><span class="punctuation">)</span>
-<span class="operator">&lt;</span><span class="name">matplotlib</span><span class="operator">.</span><span class="name">figure</span><span class="operator">.</span><span class="name">Figure</span> <span class="name builtin">object</span> <span class="name">at</span> <span class="literal number hex">0x7f47396865d0</span><span class="operator">&gt;</span>
+<span class="operator">&lt;</span><span class="name">matplotlib</span><span class="operator">.</span><span class="name">figure</span><span class="operator">.</span><span class="name">Figure</span> <span class="name builtin">object</span> <span class="name">at</span> <span class="literal number hex">0x7f49f984c5d0</span><span class="operator">&gt;</span>
 <span class="operator">&gt;&gt;&gt;</span> <span class="name">impz</span><span class="punctuation">(</span><span class="name">a</span><span class="punctuation">)</span>
 <span class="operator">&gt;&gt;&gt;</span> <span class="name">show</span><span class="punctuation">()</span>
 </pre>
