--- a/source/examples/FIR_design_pandoc.html
+++ b/source/examples/FIR_design_pandoc.html
@@ -92,7 +92,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 &gt;&gt;&gt; show()
 &gt;&gt;&gt; <span class="co">#Impulse and step response</span>
 &gt;&gt;&gt; figure(<span class="dv">2</span>)
-&lt;matplotlib.figure.Figure <span class="dt">object</span> at <span class="bn">0x7f4245c035d0</span>&gt;
+&lt;matplotlib.figure.Figure <span class="dt">object</span> at <span class="bn">0x7f6d63b025d0</span>&gt;
 &gt;&gt;&gt; impz(a)
 &gt;&gt;&gt; show()</code></pre>
 <p><img src="figures/FIR_design_figure2_1.png" /><br /><img src="figures/FIR_design_figure2_2.png" /><br /></p>
