Commit rebuild of example gallery

--- a/source/examples/AR_yw.html
+++ b/source/examples/AR_yw.html
@@ -216,7 +216,7 @@ and it is thus easy to form using <code>toeplitz</code> function from <code>scip
     <HR/>
     <div class="footer">
       <p>Published from <a href="AR_yw.mdw">AR_yw.mdw</a>
-    using <a href="http://mpastell.com/pweave">Pweave</a> 0.23.2
-    on 16-01-2016.<p></div>
+    using <a href="http://mpastell.com/pweave">Pweave</a> 0.23.2+
+    on 18-01-2016.<p></div>
   </BODY>
 </HTML>
