--- a/source/examples/FIR_design_noweb.html
+++ b/source/examples/FIR_design_noweb.html
@@ -217,7 +217,7 @@ Notice also that Pweave can now catch multiple figures/code chunk.</p>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">show</span><span class="p">()</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="c">#Impulse and step response</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">figure</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
-<span class="o">&lt;</span><span class="n">matplotlib</span><span class="o">.</span><span class="n">figure</span><span class="o">.</span><span class="n">Figure</span> <span class="nb">object</span> <span class="n">at</span> <span class="mh">0x7fb0f08f00d0</span><span class="o">&gt;</span>
+<span class="o">&lt;</span><span class="n">matplotlib</span><span class="o">.</span><span class="n">figure</span><span class="o">.</span><span class="n">Figure</span> <span class="nb">object</span> <span class="n">at</span> <span class="mh">0x7fa667a82810</span><span class="o">&gt;</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">impz</span><span class="p">(</span><span class="n">a</span><span class="p">)</span>
 <span class="o">&gt;&gt;&gt;</span> <span class="n">show</span><span class="p">()</span>
 </pre></div>
@@ -252,7 +252,7 @@ need to do ' spectral inversion "manually" anymore!</p>
     <HR/>
     <div class="footer">
       <p>Published from <a href="FIR_design_noweb.mdw">FIR_design_noweb.mdw</a>
-    using <a href="http://mpastell.com/pweave">Pweave</a> 0.23.2
-    on 16-01-2016.<p></div>
+    using <a href="http://mpastell.com/pweave">Pweave</a> 0.23.2+
+    on 18-01-2016.<p></div>
   </BODY>
 </HTML>
