--- a/source/examples/linear_regression.html
+++ b/source/examples/linear_regression.html
@@ -175,8 +175,8 @@ for more information about the syntax.</p>
 Dep. Variable:                    Gas   R-squared:                       0.944
 Model:                            OLS   Adj. R-squared:                  0.941
 Method:                 Least Squares   F-statistic:                     403.1
-Date:                Sat, 16 Jan 2016   Prob (F-statistic):           1.64e-16
-Time:                        19:07:30   Log-Likelihood:                -2.8783
+Date:                Mon, 18 Jan 2016   Prob (F-statistic):           1.64e-16
+Time:                        12:10:19   Log-Likelihood:                -2.8783
 No. Observations:                  26   AIC:                             9.757
 Df Residuals:                      24   BIC:                             12.27
 Df Model:                           1                                         
@@ -242,7 +242,7 @@ Warnings:
     <HR/>
     <div class="footer">
       <p>Published from <a href="linear_regression.py">linear_regression.py</a>
-    using <a href="http://mpastell.com/pweave">Pweave</a> 0.23.2
-    on 16-01-2016.<p></div>
+    using <a href="http://mpastell.com/pweave">Pweave</a> 0.23.2+
+    on 18-01-2016.<p></div>
   </BODY>
 </HTML>
