--- a/source/examples/FIR_design_pandoc.html
+++ b/source/examples/FIR_design_pandoc.html
@@ -110,11 +110,11 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <span class="op">&gt;&gt;&gt;</span> show()
 <span class="op">&gt;&gt;&gt;</span> <span class="co">#Impulse and step response</span>
 <span class="op">&gt;&gt;&gt;</span> figure(<span class="dv">2</span>)
-<span class="op">&lt;</span>matplotlib.figure.Figure <span class="bu">object</span> at <span class="bn">0x7ff3497d38d0</span><span class="op">&gt;</span>
+<span class="op">&lt;</span>matplotlib.figure.Figure <span class="bu">object</span> at <span class="bn">0x7f0f527d7050</span><span class="op">&gt;</span>
 <span class="op">&gt;&gt;&gt;</span> impz(a)
 <span class="op">&gt;&gt;&gt;</span> show()</code></pre></div>
 <p><img src="figures/FIR_design_figure2_1.png" /><br />
-<img src="figures/FIR_design_figure2_2.png" /><br />
+<img src="figures/FIR_design_figure2_1.png" /><br />
 </p>
 <h2 id="highpass-fir-filter">Highpass FIR Filter</h2>
 <p>Let's define a highpass FIR filter, if you compare to original blog post you'll notice that it has become easier since 2009. You don't need to do ' spectral inversion &quot;manually&quot; anymore!</p>
