--- a/source/examples/FIR_design_pandoc.html
+++ b/source/examples/FIR_design_pandoc.html
@@ -110,7 +110,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <span class="op">&gt;&gt;&gt;</span> show()
 <span class="op">&gt;&gt;&gt;</span> <span class="co">#Impulse and step response</span>
 <span class="op">&gt;&gt;&gt;</span> figure(<span class="dv">2</span>)
-<span class="op">&lt;</span>matplotlib.figure.Figure <span class="bu">object</span> at <span class="bn">0x7f762f679a90</span><span class="op">&gt;</span>
+<span class="op">&lt;</span>matplotlib.figure.Figure <span class="bu">object</span> at <span class="bn">0x7f5d24f3c5d0</span><span class="op">&gt;</span>
 <span class="op">&gt;&gt;&gt;</span> impz(a)
 <span class="op">&gt;&gt;&gt;</span> show()</code></pre></div>
 <p><img src="figures/FIR_design_figure2_1.png" /><br />
