--- a/source/examples/FIR_design_rst.html
+++ b/source/examples/FIR_design_rst.html
@@ -741,15 +741,18 @@ multiple figures/code chunk.</p>
 <span class="name">figure</span><span class="punctuation">(</span><span class="literal number integer">2</span><span class="punctuation">)</span>
 </pre>
 <pre class="code literal-block">
-&lt;matplotlib.figure.Figure at 0x7f3fd8469668&gt;
+&lt;matplotlib.figure.Figure at 0x7fc7e2665e80&gt;
 </pre>
 <pre class="code literal-block">
-&lt;matplotlib.figure.Figure at 0x7f3fd8469668&gt;
+&lt;matplotlib.figure.Figure at 0x7fc7e2665e80&gt;
 </pre>
 <pre class="code python literal-block">
 <span class="name">impz</span><span class="punctuation">(</span><span class="name">a</span><span class="punctuation">)</span>
 </pre>
 <img alt="figures/FIR_design_figure2_1.png" src="figures/FIR_design_figure2_1.png" style="width: 15cm;" />
+<pre class="code python literal-block">
+<span class="name">show</span><span class="punctuation">()</span>
+</pre>
 </div>
 <div class="section" id="highpass-fir-filter">
 <h2>Highpass FIR Filter</h2>
