--- a/source/examples/FIR_design_rst.html
+++ b/source/examples/FIR_design_rst.html
@@ -741,10 +741,10 @@ multiple figures/code chunk.</p>
 <span class="name">figure</span><span class="punctuation">(</span><span class="literal number integer">2</span><span class="punctuation">)</span>
 </pre>
 <pre class="code literal-block">
-&lt;matplotlib.figure.Figure at 0x7f9bb5a2e710&gt;
+&lt;matplotlib.figure.Figure at 0x7f79a6270a90&gt;
 </pre>
 <pre class="code literal-block">
-&lt;matplotlib.figure.Figure at 0x7f9bb5a2e710&gt;
+&lt;matplotlib.figure.Figure at 0x7f79a6270a90&gt;
 </pre>
 <pre class="code python literal-block">
 <span class="name">impz</span><span class="punctuation">(</span><span class="name">a</span><span class="punctuation">)</span>
